<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_company_bio"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/et_companyname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_black_36dp"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:hint="@string/txt_company_name"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/et_companyfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_black_36dp"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:hint="@string/txt_company_field"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/et_companyemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_36dp"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:hint="@string/txt_company_email"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:id="@+id/et_companyphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_local_phone_black_36dp"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:hint="@string/txt_company_phone"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                />
            <EditText
                android:id="@+id/et_companyaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_home_black_36dp"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:hint="@string/txt_company_address"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                />



            <Button
                android:id="@+id/btn_submit_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_Color"
                android:textColor="@android:color/white"
                android:text="@string/biodata_submit"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>