<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_intern_bio"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <EditText
                android:id="@+id/et_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_black_36dp"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:hint="@string/txt_fullname"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                />

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/txt_gender"
                    android:drawableLeft="@drawable/ic_gender_black_36dp"/>
                <RadioButton
                    android:id="@+id/rb_check_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Male"
                    android:textSize="16sp"/>

                <RadioButton
                    android:id="@+id/rb_check_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textSize="16sp"/>

            </RadioGroup>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_36dp"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:hint="@string/txt_email"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone_iphone_black_36dp"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:hint="@string/txt_phone"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                />
            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_home_black_36dp"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:hint="@string/txt_address"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/et_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_book_black_36dp"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:hint="@string/txt_education"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                />



            <Button
                android:id="@+id/btn_submit_intern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_Color"
                android:textColor="@android:color/white"
                android:text="@string/biodata_submit"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                />









        </LinearLayout>
    </LinearLayout>
</LinearLayout>