<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterOptionActivity"
    android:gravity="center"

    >

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_registerAs"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:padding="10dp"

            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_reg_intern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_intern"
                android:textSize="25dp"
                android:layout_weight="1"
                android:background="@color/bg_ColorGray"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="10dp"
                android:padding="20dp"

                />

            <Button
                android:id="@+id/btn_reg_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_company"
                android:textSize="25dp"
                android:layout_weight="1"
                android:background="@color/bg_ColorGray"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="10dp"
                android:padding="20dp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_regInternDesc"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_marginRight="1dp"
                android:textStyle="italic"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_regCompanyDesc"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="15sp"
                android:padding="5dp"
                android:textStyle="italic"
                android:background="@color/colorPrimaryDark"/>



        </LinearLayout>



    </LinearLayout>


<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/main"-->
<!--        android:gravity="bottom">-->

<!--        <ImageView-->
<!--            -->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:src="@mipmap/ic_building_foreground"-->
<!--            />-->

<!--    </RelativeLayout>-->




</RelativeLayout>
